--- a/HTML/password_recovery.html
+++ b/HTML/password_recovery.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yardsale.com</title>
     <link rel="stylesheet" href="/CSS/password_recovery.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap">
 </head>
 <body>
     <section class="login">
